--- a/frontend2/src/index.css
+++ b/frontend2/src/index.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&family=Roboto:ital,wdth,wght@0,75,100..900;1,75,100..900&display=swap');
 
 .clickable-text {
   color: #0078d4;
@@ -26,6 +26,10 @@
   left: 250px;
 }
 
+.shimmer {
+  background-color: red;
+}
+
 .error-service-name {
   color: red;
   font-size: 12px;
@@ -44,13 +48,10 @@
   right: 40px;
 }
 
-.roboto-font {
-  font-family: "Roboto", sans-serif;
-  font-optical-sizing: auto;
+.lato-thin {
+  font-family: "Lato", sans-serif;
   font-weight: 400;
   font-style: normal;
-  font-variation-settings:
-    "wdth" 75;
 }
 
 .spin {
