--- a/frontend2/src/index.css
+++ b/frontend2/src/index.css
@@ -26,6 +26,17 @@
   left: 209px;
 }
 
+.custom-progress {
+  height: 16px !important; /* Steeper/thicker progress bar */
+  border-radius: 6px;
+}
+
+.quote-box {
+  min-width: 200px;
+  flex: 1;
+}
+
+
 .offCanvasBody {
   padding: 0px !important;
 }
